--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "agora-rtc-sdk-ng": "^4.4.0",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react-dom": "^16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-elements": "^3.4.1",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-web": "^0.13.18"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
